<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/register" />
<!-- NIK Input form-->
        <EditText
            android:id="@+id/editTextNik"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:hint="@string/nik"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />
<!-- Full name Input form-->
        <EditText
            android:id="@+id/editTextFullName"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:hint="@string/fullname"
            android:inputType="text"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />

<!-- Email Input form-->
        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />
<!-- Phone Input form-->
        <EditText
            android:id="@+id/editTextPhone"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />
<!-- Password Input form-->
        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />


        <Button
            android:id="@+id/registerButton"
            style="@style/loginButton"
            app:backgroundTint="@null"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:background="@drawable/login_button"
            android:text="@string/register" />

        <TextView
            android:id="@+id/loginLink"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup_login_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>