<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">


    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login" />

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:autofillHints=""
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/loginButton"
            style="@style/loginButton"
            app:backgroundTint="@null"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login" />

        <TextView
            android:id="@+id/registerLink"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>